mi primer confirmacion de actualizacion

--- a/about.html
+++ b/about.html
@@ -33,6 +33,9 @@
          <div class="imagen-cont">
             <img src="imagenes/imagen1.jpg" alt="Descripcion imagen 1"> <!--Para crear la ruta de imagenes, debemos incorporarlas en la misma carpeta del codigo que venimos trabajando-->
             <img src="imagenes/imagen2.png" alt="Descripcion imagen 2">
+        </div>
+        <div class="container saludo">
+            <h1> Gracias por su visita</h1>
         </div>    
      </main>
 
